--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
- <head>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cafe W 메인</title>
-  <link rel="stylesheet" href="./scss/style.scss" />
- </head>
- <body>
-    <h1>cafeW 리뉴얼 프로젝트!</h1>
+  <link rel="stylesheet" href="./sass/style.scss" />
+</head>
+<body>
+    <div class="body-container">
+        <div class="layout-full header-container">
+            <div class="layout-width">
+                <div class="header">헤더</div>        
+            </div>
+        </div>
+        <div class="layout-full navigation-container">
+            <div class="layout-width">
+                <nav class="navgation">
+                    네비게이션
+                </nav>
+            </div>
+        </div>
+        <div class="layout-full main-container">
+            <main class="main">
+                <div class="layout-full season-container">
+                    <div class="layout-width">
+                        <section class="season">시즌음료</section>
+                    </div>
+                </div>
+                <div class="layout-full notice-container">
+                    <div class="layout-width">
+                        <section class="notice">공지사항</section>
+                    </div>
+                </div>
+            </main>
+        </div>
+        <div class="layout-full footer-container">
+            <div class="layout-width">
+                <footer class="footer">푸터</footer>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
